2013-06-08  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-add-log-current-defun): New function.
	(octave-mode): Set add-log-current-defun-function.
	(octave-goto-function-definition): Do not move point if not found.
	(octave-find-definition): Enhance to try subfunctions first.

2013-06-08  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-char-before)
	(byte-compile-backward-char, byte-compile-backward-word):
	Improve previous change, to handle non-explicit nil.

2013-06-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el: Improve show-paren-mode behavior.
	(smie--opener/closer-at-point): New function.
	(smie--matching-block-data): Use it.  Don't match from right after an
	opener or right before a closer.  Obey smie-blink-matching-inners.
	Don't signal a mismatch for repeated inners like "switch..case..case".

2013-06-07  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-mode): Set comment-use-global-state
	to t.  (Bug#14303)
	(octave-function-header-regexp): Fix.  (Bug#14570)
	(octave-help-mode-finish-hook, octave-help-mode-finish):
	Remove.  Just use temp-buffer-show-hook.

	* newcomment.el (comment-search-backward): Revert last change.
	(Bug#14434)

	* emacs-lisp/smie.el (smie--matching-block-data): Minor simplification.

2013-06-07  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in (TAGS TAGS-LISP): Pass the (long) list of *.el files
	through xargs, to avoid failure due to MS-Windows limitations on
	command-line length.

2013-06-06  Glenn Morris  <rgm@gnu.org>

	* font-lock.el (lisp-font-lock-keywords-2):
	Treat user-error like error.

	* emacs-lisp/bytecomp.el (byte-compile-char-before)
	(byte-compile-backward-char, byte-compile-backward-word):
	Handle explicit nil arguments.  (Bug#14565)

2013-06-05  Alan Mackenzie  <acm@muc.de>

	* isearch.el (isearch-allow-prefix): New user option.
	(isearch-other-meta-char): Don't exit isearch when a prefix