@@ -1,3 +1,10 @@
+2013-06-09  Aidan Gauland  <aidalgol@amuri.net>
+
+	* eshell/em-term.el (eshell-visual-command-p): New function.
+	(eshell-term-initialize): Move long lambda to separate function eshell-visual-command-p.
+	* eshell/em-dirs.el (eshell-dirs-initialise): Add missing #' to lambda.
+	* eshell/em-script.el (eshell-script-initialize): Add missing #' to lambda.
+
 2013-06-08  Leo Liu  <sdl.web@gmail.com>
 
 	* progmodes/octave.el (octave-add-log-current-defun): New function.
